# nsis_analysis

./: LICENSE  README.MD  analyzer.py  archive_utils.py  extractor.py  main.py  parser.py  pe_analysis.py  pyproject.toml  report.py  utils.py
extra/: nsiDecomp.py  nsiDecomp.txt
tests/: hello.c  suspicious.nsi
