[project]
name = "nsis-analysis"
version = "0.1.0"
description = "A tool to analyze NSIS scripts and installers for suspicious behavior and optionally submit them to Hybrid Analysis."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Naman Priyadarshi", email = "namanpriyadarshicr7@gmail.com" }
]
dependencies = [
  "requests",
  "pefile",
]

[project.urls]
Homepage = "https://github.com/Naman-Priyadarshi/nsis_analyzer"
Repository = "https://github.com/Naman-Priyadarshi/nsis_analyzer"
Issues = "https://github.com/Naman-Priyadarshi/nsis_analyzer/issues"

[tool.setuptools]
packages = ["nsis_analysis"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
